# sanatorium

./: .editorconfig  .gitignore  .npmrc  .prettierignore  LICENSE  Makefile  README.md  common_makefile.mk  package-lock.json  package.json
husky/: .huskyrc  commit-msg  pre-commit
src/: .env.example  Dockerfile  Dockerfile.tests  Makefile  README.md  docker-compose.tests.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
src/backend/: .env.example  Dockerfile  Dockerfile.tests  docker-compose.dev.yml  docker-compose.tests.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
src/backend/lib/: __init__.py
src/backend/lib/api/: __init__.py
src/backend/lib/api/v1/: __init__.py
src/backend/lib/api/v1/handlers/: __init__.py  errors.py  health.py  users.py
src/backend/lib/api/v1/schemas/: __init__.py  health.py  user.py
src/backend/lib/app/: __init__.py  app.py  errors.py  settings.py
src/backend/lib/app/split_settings/: __init__.py  api.py  app.py  database.py  logger.py  utils.py
src/backend/lib/clients/: __init__.py  database.py
src/backend/lib/models/: __init__.py  admin_views.py  mixins.py  user.py
src/backend/lib/models/orm/: __init__.py  base.py  dining.py  physician.py  registration.py  room.py  travel_package.py  user.py
src/backend/lib/user/: __init__.py  models.py  repositories.py  services.py
src/backend/lib/utils/: __init__.py  batch.py  database.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: 2024-06-02_f96e4b8258fb_initial_create_tables.py
src/backend/tests/: conftest.py
src/backend/tests/core/: settings.py
src/backend/tests/core/split_settings/: __init__.py  api.py  project.py  utils.py
src/backend/tests/functional/: __init__.py
src/backend/tests/functional/models/: http.py
src/backend/tests/functional/src/: test_health.py
src/lib/: __init__.py
src/lib/api/: __init__.py
src/lib/api/v1/: __init__.py
src/lib/api/v1/handlers/: __init__.py  errors.py  health.py
src/lib/api/v1/schemas/: __init__.py  health.py
src/lib/app/: __init__.py  app.py  errors.py  settings.py
src/lib/app/split_settings/: __init__.py  api.py  app.py  database.py  logger.py  utils.py
src/lib/clients/: __init__.py  database.py
src/lib/models/: __init__.py  mixins.py
src/lib/models/orm/: __init__.py  base.py  dining.py  physician.py  travel_package.py  user.py
src/lib/utils/: __init__.py  batch.py  database.py
src/migrations/versions/: 2024-06-02_f96e4b8258fb_initial_create_tables.py
src/telegram/: .env.example  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
src/telegram/lib/app/: __init__.py  app.py  errors.py  settings.py
src/telegram/lib/app/split_settings/: __init__.py  app.py  logger.py  project.py  redis.py
src/telegram/lib/clients/: __init__.py  redis_client.py
src/telegram/lib/filters/: __init__.py  admin.py  formats.py
src/telegram/lib/routers/: __init__.py  general.py  utils.py
src/telegram/lib/routers/commands/: __init__.py  start.py
src/telegram/lib/routers/media/: __init__.py  create.py  excel.py  get.py  run.py  start.py
src/telegram/lib/routers/sanatorium/: __init__.py  user.py
src/telegram/lib/sanatorium/models/: __init__.py  user.py
src/telegram/lib/sanatorium/services/: user.py
src/telegram/lib/structures/fsm/: __init__.py  sanatorium.py
src/telegram/lib/structures/keyboards/: __init__.py  base.py  media.py
src/tests/: conftest.py  pytest.ini
src/tests/core/: __init__.py  settings.py
src/tests/core/split_settings/: __init__.py  api.py  project.py  utils.py
src/tests/functional/: __init__.py
src/tests/functional/models/: __init__.py  http.py
src/tests/functional/src/: test_health.py
src/tests/unit/src/: test_health.py
